<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="?android:attr/windowSwipeToDismiss"
    android:animationCache="false"
    android:background="@drawable/spa_backgroun3"
    android:orientation="vertical"
    android:scaleType="fitCenter">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/l2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="50dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/red_transparent"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/textPhoneLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="50dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="50dp"
                        android:gravity="start">

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/searchTextPhone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/cairo_regular"
                            android:gravity="start"
                            android:hint="@string/phone_number"
                            android:inputType="phone"
                            android:textColor="@color/colorText"
                            android:textSize="16sp" />
                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/searchBtn"
                        style="@style/SolidButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_below="@+id/textPhoneLayout"
                        android:layout_gravity="center"
                        android:layout_marginBottom="40dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginTop="50dp"
                        android:fontFamily="@font/cairo_regular"
                        android:padding="10dp"
                        android:text="@string/search" />

                    <Button
                        android:id="@+id/clearBtn"
                        style="@style/StrokeButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/textPhoneLayout"
<<<<<<< HEAD
=======
                        android:layout_marginBottom="40dp"
>>>>>>> 0026944e737158b551053a24feabf29d5e80170d
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="50dp"
                        android:fontFamily="@font/cairo_regular"
                        android:padding="10dp"
                        android:text="@string/clear"
                        android:textColor="#fff" />

<<<<<<< HEAD
                    <Button
                        android:id="@+id/historyBtn"
                        style="@style/SolidButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/clearBtn"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="30dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/cairo_regular"
                        android:padding="10dp"
                        android:text="History"
                        android:textColor="#fff" />


                </RelativeLayout>

=======
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </LinearLayout>
>>>>>>> 0026944e737158b551053a24feabf29d5e80170d

                <LinearLayout
                    android:id="@+id/client_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/clientName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".33"
                        android:background="#d7e899c5"
                        android:fontFamily="@font/cairo_regular"
                        android:padding="10dp"
                        android:text="@string/full_name"
                        android:textAlignment="center"
                        android:textColor="@color/colorText" />

                    <TextView
                        android:id="@+id/clientPhone"
                        style="@style/StrokeButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".33"
                        android:background="#d7e899c5"
                        android:fontFamily="@font/cairo_regular"
                        android:padding="10dp"
                        android:text="@string/phone_number"
                        android:textAlignment="center"
                        android:textColor="@color/colorText" />

                    <TextView
                        android:id="@+id/clientEmail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".33"
                        android:background="#d7e899c5"
                        android:fontFamily="@font/cairo_regular"
                        android:padding="10dp"
                        android:text="@string/e_mail_address"
                        android:textAlignment="center"
                        android:textColor="@color/colorText" />

                </LinearLayout>

<<<<<<< HEAD
                <Button
                    android:id="@+id/update"
                    style="@style/SolidButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/cairo_regular"
                    android:text="@string/update" />
=======
>>>>>>> 0026944e737158b551053a24feabf29d5e80170d

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <Button
                        android:id="@+id/clientBtn"
                        style="@style/StrokeButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="50dp"
                        android:layout_marginTop="20dp"
                        android:layout_weight=".4"
                        android:fontFamily="@font/cairo_regular"
                        android:padding="10dp"
                        android:paddingEnd="100dp"
                        android:paddingStart="100dp"
                        android:text="@string/new_client" />
                </LinearLayout>

            </LinearLayout>


        </RelativeLayout>
    </ScrollView>

</RelativeLayout>